apps/serviio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviio-cons
  labels:
    app: serviio
spec:
  selector:
    app: serviio
  ports:
  - port: 23423
    targetPort: 23423
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: serviio-mb
  labels:
    app: serviio
spec:
  selector:
    app: serviio
  ports:
  - port: 23424
    targetPort: 23424
  type: ClusterIP
